Minor bug fix. :sigma:
FINALLY ITS OVER (time to fix bugs!!!)